just trying to fix things

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 	margin-bottom:0px;
 }
 .jumbotron{
-	background-image:url("background_ocean".jpg");
+	background-image:url("yolosweg.jpg");
 	background-repeat:repeat-x;
 	height:500px;
 	text-align:center;
