--- a/header.css
+++ b/header.css
@@ -1,3 +1,4 @@
+/* Animations */
 @keyframes titleExpand{
 	from {width: 0px;}
 	to {width: 250px;}
@@ -8,18 +9,13 @@
 	to {width: 150px;}
 }
 
-/* THIS IS FOR TESTING WITH HEADER */
-body{
-	margin:0px;
-}
-
-/* HEADER AND LOGO */
+/* Header, Logo, Title, Menu... */
 #header{
 	display:block;
 	background-color:rgba(27, 167, 242, 1);
 	text-align:center;
 	vertical-align: middle;
-	margin: none;
+	margin: 0px;
 }
 #titleandlogo {
 	position: absolute;
@@ -36,7 +32,6 @@ body{
 	top: 5px;
   height: 50px;
 
-
 	animation-name: logoExpand;
 	animation-delay: 0.7s;
 	animation-duration: 0.4s;
@@ -52,12 +47,13 @@ body{
 }
 
 #titleandlogo span{
-	//width: 300px;
+	width: 0px;
 	float:left;
 	text-align: left;
 	color:white;
 	font-size:34px;
-	font-family:'Open Sans';
+	line-height: 1.25em;
+	font-family:'Open Sans', Arial;
 	overflow: hidden;
 	animation-name: titleExpand;
 	animation-delay: 0.1s;
@@ -65,7 +61,8 @@ body{
 	animation-timing-function: ease-in;
 	animation-fill-mode: forwards;
 }
-#menu{
+
+#bar{
 	float:right;
 	margin-top: 59px;
 	margin-right: 22px;
@@ -74,45 +71,42 @@ body{
 	height:46px;
 	width: 550px;
 	text-transform: uppercase;
+	vertical-align: middle;
 	font-family: arial;
 	font-size: 12px;
+	display: table;
 	color: white;
+  table-layout: fixed;
 	background-color: rgba(237, 237, 237, 0.34);
 }
-#menu div .active{
-	background-color: white;
-	color: gray;
-}
-#menu div {
-	display: table;
-    width: 100%;
+
+#bar a{
+	display:table-cell;
+	width: 100%;
 	height: 100%;
-	text-align: center;
-	vertical-align: middle;
-    table-layout: fixed;
-	background-color: none;
 	border-left: 1px solid rgba(4, 81, 132, 1);
+	text-decoration: none;
+	vertical-align: middle;
+	color: white;
 }
-#menu div:last-child{
-	border-right: none;
-	border-top-right-radius: 30px;
-	border-bottom-right-radius: 30px;
+#bar .active{
+		background-color: white;
+		color: gray;
 }
-#menu div:first-child{
-	border-left: none;
+#bar a:first-of-type{
+	border-left: 0;
 	border-top-left-radius: 30px;
 	border-bottom-left-radius: 30px;
 }
-#menu div > div{
-    display: table-cell;
-    padding: 4px 6px;
-    width: 2%;
-    margin-bottom: 0;
+#bar a:last-of-type{
+		border-top-right-radius: 30px;
+		border-bottom-right-radius: 30px;
 }
-.button{
+
+#bar .button{
 	transition: all 0.5s;
 }
-.button:hover{
+#bar .button:hover{
 	background-color: white;
 	color: rgba(27, 167, 242, 1);;
 }
