--- a/jumbotron.css
+++ b/jumbotron.css
@@ -7,22 +7,32 @@
 	text-align:center;
 	background-image:url('background_ocean.jpg');
 	background-repeat:no-repeat;
-	height:500px;
+	background-size: cover;
+	height:600px;
 }
 
 
 
-#title{
+.jumbotron #title{
 	color:white;
-	text-shadow: 0px 2px 4px #a6a6a6;
+	text-shadow: 0px 2px 4px black;
 	font-size:75px;
 }
 
-#button{
+.jumbotron #button{
 	color:white;
+	font-family: Arial;
+	font-size: 15px;
+	text-transform: uppercase;
+	width:150px;
+	height:53px; /*(menu_bar_height - border*2) to make outside of button same size as the menu bar*/
+
 	border:3px solid white;
+	background-color:rgba(2247, 247, 247, 0);
+	transition: all 0.5s;
+
 }
 
-#button:hover{
-	background-color:rgba(2247, 247, 247, 0.2)
+.jumbotron #button:hover{
+	background-color:rgba(2247, 247, 247, 0.4)
 }
