--- a/jumbotron.css
+++ b/jumbotron.css
@@ -17,6 +17,8 @@
 	color:white;
 	text-shadow: 0px 2px 4px black;
 	font-size:75px;
+	font-family:'Open Sans', sans-serif;
+	padding:35px;
 }
 
 .jumbotron #button{
